--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "portfolio-frontend",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ffroliva/portfolio-frontend.git"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -46,7 +50,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "tslint": "^5.15.0",
     "typescript": "~3.4.3"
   }
 }
